--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 4000
-DATABASE=mongodb+srv://deepakdevelopersveltose01:Deepak486@comrade.8vvxj.mongodb.net/Matrimony?retryWrites=true&w=majority
+DATABASEdev=mongodb+srv://deepakdevelopersveltose01:Deepak486@comrade.8vvxj.mongodb.net/Matrimony?retryWrites=true&w=majority
+DATABASE = mongodb://127.0.0.1:27017/Matrimony?retryWrites=true&w=majority
